# concurrent-automaton

./: CMakeLists.txt  README.md  automaton.c  automaton.h  messages.c  messages.h  mylimits.h  mytypes.h  run.c  statearray.c  statearray.h  stats.c  stats.h  tester.c  utils.c  utils.h  validator.c
